WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134345
Fix Debug Build Error in Webcore module
https://bugs.webkit.org/show_bug.cgi?id=134345
Summary
Fix Debug Build Error in Webcore module
Shivakumar J M
Reported
2014-06-26 03:04:00 PDT
Found Build Error in WebCore/platform/graphics/harfbuzz/HarfBuzzShaper.cpp during webkit-efl port debug build. from /home/shiva.jm/webkit-git/svngitjun13/WebKit/Source/WebCore/platform/graphics/harfbuzz/HarfBuzzShaper.cpp:31: /home/shiva.jm/webkit-git/svngitjun13/WebKit/Source/WebCore/platform/graphics/harfbuzz/HarfBuzzShaper.cpp: In member function ‘void WebCore::HarfBuzzShaper::setDrawRange(int, int)’: /home/shiva.jm/webkit-git/svngitjun13/WebKit/Source/WebCore/platform/graphics/harfbuzz/HarfBuzzShaper.cpp:335:57: error: comparison between signed and unsigned integer expressions [-Werror=sign-compare] ASSERT_WITH_SECURITY_IMPLICATION(to <= m_run.length()); ^ /home/shiva.jm/webkit-git/svngitjun13/WebKit/Source/WTF/wtf/Assertions.h:268:8: note: in definition of macro ‘ASSERT_WITH_SECURITY_IMPLICATION’ (!(assertion) ? \ ^ [ 68%] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/platform/graphics/texmap/coordinated/AreaAllocator.cpp.o
Attachments
Patch
(1.38 KB, patch)
2014-06-26 03:14 PDT
,
Shivakumar J M
no flags
Details
Formatted Diff
Diff
Patch-Updated
(1.36 KB, patch)
2014-06-26 03:24 PDT
,
Shivakumar J M
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Shivakumar J M
Comment 1
2014-06-26 03:14:12 PDT
Created
attachment 233898
[details]
Patch Use static cast to change the type of variable to fix error
WebKit Commit Bot
Comment 2
2014-06-26 03:15:27 PDT
Attachment 233898
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Shivakumar J M
Comment 3
2014-06-26 03:24:47 PDT
Created
attachment 233900
[details]
Patch-Updated Updated the patch since no tests are needed
alan
Comment 4
2014-06-26 07:29:16 PDT
Comment on
attachment 233900
[details]
Patch-Updated I'd rather have both 'from' and 'to' unsigned, but this is good for now to get the build fixed.
WebKit Commit Bot
Comment 5
2014-06-26 08:00:45 PDT
Comment on
attachment 233900
[details]
Patch-Updated Clearing flags on attachment: 233900 Committed
r170479
: <
http://trac.webkit.org/changeset/170479
>
WebKit Commit Bot
Comment 6
2014-06-26 08:00:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug