[EFL][WK2] Fix Debug Build Error in Webcore module. https://bugs.webkit.org/show_bug.cgi?id=134345

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2014-06-26
Reviewed by Zalan Bujtas.

Use static cast to change the type of variable to fix error

* platform/graphics/harfbuzz/HarfBuzzShaper.cpp:
(WebCore::HarfBuzzShaper::setDrawRange):

Canonical link: https://commits.webkit.org/152326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170479 268f45cc-cd09-0410-ab3c-d52691b4dbfc