Source/WebCore/platform/graphics/harfbuzz/HarfBuzzShaper.cpp
@@ -332,7 +332,7 @@ void HarfBuzzShaper::setPadding(int padding)
 void HarfBuzzShaper::setDrawRange(int from, int to)
 {
     ASSERT_WITH_SECURITY_IMPLICATION(from >= 0);
-    ASSERT_WITH_SECURITY_IMPLICATION(to <= m_run.length());
+    ASSERT_WITH_SECURITY_IMPLICATION(to <= static_cast<int>(m_run.length()));
     m_fromIndex = from;
     m_toIndex = to;
 }
